edit: compact arrays

--- a/ds/arrays/compact_arrays.ipynb
+++ b/ds/arrays/compact_arrays.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Compact Unsorted Arrays\n"
+    "# Compact Arrays\n"
    ]
   },
   {
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,8 +35,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Unsorted Arrays\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -266,6 +273,191 @@
     "print(f\"{array_union(arr1, arr2) = }\")\n",
     "print(f\"{find_pairs_for_condition(arr1, lambda a, b: a + b == 6) = }\")\n",
     "print(f\"{count_values_in_range(arr1, 4, 7) = }\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sorted arrays\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def search_value(arr: List[T], value: T) -> int: \n",
+    "    left, right = 0, len(arr) - 1\n",
+    "\n",
+    "    while left <= right: \n",
+    "        mid = (left + right) // 2\n",
+    "        if value < arr[mid]:\n",
+    "            right = mid - 1\n",
+    "        elif value > arr[mid]:\n",
+    "            left = mid + 1\n",
+    "        else: \n",
+    "            return mid\n",
+    "    \n",
+    "    return -1\n",
+    "\n",
+    "def find_k_smallest(arr: List[T], k: int) -> T:\n",
+    "    if not (0 < k <= len(arr)):\n",
+    "        raise ValueError(f\"{k = } cannot be out of bounds: 1 to {len(arr)}\")\n",
+    "\n",
+    "    return arr[k - 1]\n",
+    "\n",
+    "\n",
+    "def find_k_largest(arr: List[T], k: int) -> T:\n",
+    "    if not (0 < k <= len(arr)):\n",
+    "        raise ValueError(f\"{k = } cannot be out of bounds: 1 to {len(arr)}\")\n",
+    "\n",
+    "    return arr[-k]\n",
+    "\n",
+    "def test_uniqueness(arr: List[T]) -> bool:\n",
+    "    for i in range(len(arr) - 1):\n",
+    "        if arr[i] == arr[i+1]:\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "    \n",
+    "def delete_duplicates(arr: List[T]) -> List[T]:\n",
+    "    new_arr: List[T] = list()\n",
+    "    if not arr:\n",
+    "        return \n",
+    "    \n",
+    "    new_arr.append(arr[0])\n",
+    "    for val in arr[1:]:\n",
+    "        if val != new_arr[-1]:\n",
+    "            new_arr.append(val)\n",
+    "    \n",
+    "    return new_arr\n",
+    "\n",
+    "def count_appearances(arr: List[T], value: T) -> int:\n",
+    "    appearances = 0\n",
+    "    \n",
+    "    for val in arr:\n",
+    "        if val == value: \n",
+    "            appearances += 1\n",
+    "        elif val > value: \n",
+    "            break\n",
+    "    return appearances\n",
+    "\n",
+    "def array_intersection(arr1: List[T], arr2: List[T]) -> List[T]:\n",
+    "    new_arr: List[T] = list()\n",
+    "\n",
+    "    p1 = p2 = 0\n",
+    "\n",
+    "    while p1 < len(arr1) and p2 < len(arr2):\n",
+    "        if arr1[p1] == arr2[p2]:\n",
+    "            if len(new_arr) == 0 or arr1[p1] != new_arr[-1]:\n",
+    "                new_arr.append(arr1[p1])\n",
+    "            p1 += 1\n",
+    "            p2 += 1\n",
+    "        elif arr1[p1] < arr2[p2]:\n",
+    "            p1 += 1\n",
+    "        elif arr1[p1] > arr2[p2]:\n",
+    "            p2 += 1\n",
+    "\n",
+    "    return new_arr\n",
+    "\n",
+    "def array_union(arr1: List[T], arr2: List[T]) -> List[T]:\n",
+    "    new_arr: List[T] = list()\n",
+    "\n",
+    "    p1 = p2 = 0\n",
+    "\n",
+    "    while p1 < len(arr1) and p2 < len(arr2):\n",
+    "        val1 = arr1[p1]\n",
+    "        val2 = arr2[p2]\n",
+    "\n",
+    "        if val1 < val2:\n",
+    "            new_arr.append(val1) \n",
+    "            p1 += 1\n",
+    "        elif val1 > val2: \n",
+    "            new_arr.append(val2)\n",
+    "            p2 += 1\n",
+    "        else: \n",
+    "            if not (new_arr and val1 == new_arr[-1]):\n",
+    "                new_arr.append(val1)\n",
+    "            p1 += 1\n",
+    "            p2 += 1\n",
+    "        \n",
+    "    while p1 < len(arr1):\n",
+    "        new_arr.append(arr1[p1])\n",
+    "        p1 += 1\n",
+    "    \n",
+    "    while p2 < len(arr2):\n",
+    "        new_arr.append(arr2[p2])\n",
+    "        p2 += 1\n",
+    "\n",
+    "    return new_arr\n",
+    "\n",
+    "def find_pair_with_sum(arr: List[T], target_sum: T) -> List[Tuple[T, T]]:\n",
+    "    result_arr: List[Tuple[T, T]] = list()\n",
+    "\n",
+    "    left, right = 0, len(arr) - 1\n",
+    "\n",
+    "    while left <= right: \n",
+    "        current_sum = arr[left] + arr[right]\n",
+    "        if current_sum < target_sum: \n",
+    "            left += 1\n",
+    "        elif current_sum > target_sum: \n",
+    "            right -= 1\n",
+    "        else: \n",
+    "            if not (result_arr and (arr[left], arr[right]) in result_arr):\n",
+    "                result_arr.append((arr[left], arr[right]))\n",
+    "            left += 1\n",
+    "            right -= 1\n",
+    "        \n",
+    "    return result_arr\n",
+    "    \n",
+    "def count_values_in_range(arr: List[T], low: T, high: T) -> int: \n",
+    "    left, right = 0, len(arr) - 1\n",
+    "\n",
+    "    while arr[left] < low: \n",
+    "        left += 1\n",
+    "    while arr[right] > high: \n",
+    "        right -= 1\n",
+    "    return right - left + 1\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "search_value(arr3, 35) = 8\n",
+      "find_k_smallest(arr3, 4) = 12\n",
+      "find_k_largest(arr3, 6) = 12\n",
+      "test_uniqueness(arr3) = False\n",
+      "delete_duplicates(arr3) = [1, 5, 9, 12, 19, 24, 28, 35]\n",
+      "count_appearances(arr3, 24) = 2\n",
+      "array_intersection(arr3, arr4) = [1, 12, 24, 35]\n",
+      "array_union(arr3, arr4) = [1, 3, 5, 9, 10, 12, 18, 19, 24, 28, 29, 30, 35]\n",
+      "find_pair_with_sum(arr3, 33) = [(5, 28), (9, 24)]\n",
+      "count_values_in_range(arr4, 12, 24) = 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "arr3 = [1, 5, 9, 12, 19, 24, 24, 28, 35]\n",
+    "arr4 = [1, 3, 10, 12, 18, 24, 24, 29, 30, 35]\n",
+    "\n",
+    "print(f\"{search_value(arr3, 35) = }\")\n",
+    "print(f\"{find_k_smallest(arr3, 4) = }\")\n",
+    "print(f\"{find_k_largest(arr3, 6) = }\")\n",
+    "print(f\"{test_uniqueness(arr3) = }\")\n",
+    "print(f\"{delete_duplicates(arr3) = }\")\n",
+    "print(f\"{count_appearances(arr3, 24) = }\")\n",
+    "print(f\"{array_intersection(arr3, arr4) = }\")\n",
+    "print(f\"{array_union(arr3, arr4) = }\")\n",
+    "print(f\"{find_pair_with_sum(arr3, 33) = }\")\n",
+    "print(f\"{count_values_in_range(arr4, 12, 24) = }\")"
    ]
   }
  ],
