--- a/ds/arrays/compact_arrays.ipynb
+++ b/ds/arrays/compact_arrays.ipynb
@@ -302,6 +302,15 @@
     "    \n",
     "    return -1\n",
     "\n",
+    "def insert_value(arr: List[T], value: T) -> None: \n",
+    "    arr.append(value)\n",
+    "\n",
+    "    i = len(arr) - 2\n",
+    "    while i >= 0: \n",
+    "        if arr[i] < arr[i + 1]: \n",
+    "            arr[i], arr[i + 1] = arr[i + 1], arr[i]\n",
+    "        i -= 1\n",
+    "\n",
     "def find_k_smallest(arr: List[T], k: int) -> T:\n",
     "    if not (0 < k <= len(arr)):\n",
     "        raise ValueError(f\"{k = } cannot be out of bounds: 1 to {len(arr)}\")\n",
